@@ -1,19 +1,11 @@
 package com.baeldung.java8;
 
-import java.util.ArrayDeque;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Queue;
-import java.util.Set;
-import java.util.function.Consumer;
-
 import org.junit.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.util.*;
+import java.util.function.Consumer;
 
 public class Java8ForEachUnitTest {
 
@@ -22,12 +14,7 @@ public class Java8ForEachUnitTest {
     @Test
     public void compareForEachMethods_thenPrintResults() {
 
-        List<String> names = new ArrayList<>();
-        names.add("Larry");
-        names.add("Steve");
-        names.add("James");
-        names.add("Conan");
-        names.add("Ellen");
+        List<String> names = List.of("Larry", "Steve", "James", "Conan", "Ellen");
 
         // Java 5 - for-loop
         LOG.debug("--- Enhanced for-loop ---");
@@ -44,7 +31,7 @@ public class Java8ForEachUnitTest {
         Consumer<String> printConsumer = new Consumer<String>() {
             public void accept(String name) {
                 LOG.info(name);
-            };
+            }
         };
 
         names.forEach(printConsumer);
@@ -68,7 +55,7 @@ public class Java8ForEachUnitTest {
 
     @Test
     public void givenList_thenIterateAndPrintResults() {
-        List<String> names = Arrays.asList("Larry", "Steve", "James");
+        List<String> names = List.of("Larry", "Steve", "James", "Conan", "Ellen");
 
         names.forEach(LOG::info);
     }
@@ -110,13 +97,15 @@ public class Java8ForEachUnitTest {
 
     @Test
     public void givenArray_whenIteratingWithForEachMethod_thenLogResult() {
-        String [] foodItems = {"rice", "beans", "egg"};
-        Arrays.stream(foodItems).forEach(LOG::info);
+        String[] foodItems = { "rice", "beans", "egg" };
+        Arrays.stream(foodItems)
+            .forEach(LOG::info);
     }
 
     @Test
     public void givenACollection_whenIteratingWithForEachInParallel_thenLogResult() {
-        List<String> names = new ArrayList<>(List.of("Larry", "Steve", "James"));
-        names.parallelStream().forEach(LOG::info);
+        List<String> names = List.of("Larry", "Steve", "James", "Conan", "Ellen");
+        names.parallelStream()
+            .forEach(LOG::info);
     }
 }
